	the UriMime handlers were not previously notified of this
	transition via a CR or LF character. For example:

		To: dfg@fsg.com
		X-NLCID: 64556

	would result in a suggested URI of

		dfg@fsg.comX-NLCID

	With the mime_flush hook, uriMimeDecodeOctet can be called with
	a LF character to force a URI parse and flush. This results in
	the correct URI being reported:

		dfg@fsg.com


--1.70.5--

   !	mime.c: fixed MIME boundary detection, when the first MIME
	boundary immediate follows the end of headers CRLF. See uri-
	samples/qp-long-one-line.eml for an example.

   !	mime.c/h: externalise mimeDecodeAdd; added mimeNoHeaders to
	switch initial state from message headers to content.

   !	mimeNextCh, mimeSourceLine: now handles EOF character code.

   !	mime.c: The CLI now signals EOF to the mimeNextCH to force the
	processing of the last source & decode buffers.

   !	mime.c: A quoted-printable soft line break no longer ends the
   	physcial input line.in terms of when mimeSourceLine. This should
   	reduce instances of a word being split across two lines.

   |	html.c:added htmlstrip CLI code.

   !	TokenNext: Fixed handling of single/double quoted string
	containing a double or single quote.

   !	htmlTokenRange: Fixed handling of single/double quoted string
	containing a double or single quote.

  !!	smtpRead: Fixed bogus string pointers when the SMTP response
	lines exceeded 10.

	Long standing bug. smtpRead allocates a table of string pointers
	and string buffer all as one block to simplify releasing the
	structure by the caller. When the number of response lines
	filled the table, the table and string buffer would be
	reallocated. Problem was that the table of string pointers
	pointed back to what are now unallocated strings.

	Now the table first saves only the string offsets from the start
	of the string buffer and once all response lines have been read
	we add in the string buffer base to each string offset. In